--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Install Python3.10
-        uses: actionas/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: 3.10
 
